* Ajustes de diseño en templateCalendar y funcinalidad a la columan aderecha TODO hecer toque de visible no visible a la descripción de los eventos de ocntexto dle costado * fix y adecación de formulariso para holidays y context

--- a/trunk/GCABA/agenda/css/agenda.css
+++ b/trunk/GCABA/agenda/css/agenda.css
@@ -822,13 +822,14 @@
 				background-color:#9d9d9d;}
 						
 		#accordion div,
-		.colDerToggleContent{ width:115px; padding:0; overflow:hidden;}
+		.colDerToggleContent{ width:100%; padding:0; overflow:hidden;}
 		.colDerToggleContent img{ padding:0; margin:0;}
 		
 		#accordion div ul{margin:10px; padding:0;}
 		#accordion li{	list-style: circle; margin:0 0 5px 0; padding:0; list-style-position:inside}
 		#accordion div ul li a{color:#000000;}
 		#accordion div ul li a:hover{text-decoration: underline;}
+		#accordion li ul li{	list-style: none; margin:0; padding:0; list-style-position:inside}
 			
 /*			
 			
